several adaptations for enabling routes specific for one transport (railway, for example), default strategy being FOOT and default preference being DISTANCE