@@ -1,7 +1,6 @@
 package io.meli.melimaps.strategy;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -16,7 +15,7 @@ import io.meli.melimaps.enums.EnumPreferences;
 import io.meli.melimaps.enums.EnumTransport;
 import io.meli.melimaps.interfaces.GraphStructure;
 import io.meli.melimaps.interfaces.TransportStrategy;
-import io.meli.melimaps.model.Route;
+import io.meli.melimaps.model.CompleteRoute;
 import io.meli.melimaps.model.Vertex;
 
 public abstract class AbstractTransportStrategy implements TransportStrategy {
@@ -36,27 +35,25 @@ public abstract class AbstractTransportStrategy implements TransportStrategy {
     
 
     @Override
-    public Map<String, Route> returnRoutesConsideringPreferences(Vertex origin, Vertex destination, GraphStructure graph, Map<String, Route> rawRoutes, List<EnumPreferences> preferences) {
-        Map<String, Route> result = new HashMap<>();
-        result.putAll(rawRoutes);
-        return result;
+    public Map<String, CompleteRoute> returnRoutesConsideringPreferences(Vertex origin, Vertex destination, GraphStructure graph, Map<String, CompleteRoute> rawRoutes, List<EnumPreferences> preferences) {
+        return rawRoutes;
     }
 
-    protected Map<String, Route> applyPreferenceToRoute(Route route, EnumPreferences preference) {
-        Map<String, Route> result = new HashMap<>();
+    protected Map<String, CompleteRoute> applyPreferenceToRoute(CompleteRoute route, EnumPreferences preference) {
+        Map<String, CompleteRoute> result = new HashMap<>();
         result.put("Best route considering %s : ".formatted(preference.name()), route);
         return result;
     }
 
-    protected Route getShortestPathBetween(Vertex source, Vertex destination, List<Vertex> map) {
-        Route bestRoute = calculateShortestPathToEachVertex(source, map).stream()
+    protected CompleteRoute getShortestPathBetween(Vertex source, Vertex destination, List<Vertex> map) {
+        CompleteRoute bestRoute = calculateShortestPathToEachVertex(source, map).stream()
                 .filter(route -> route.getDestinationName().equalsIgnoreCase(destination.getName()) && route.getOriginName().equalsIgnoreCase(source.getName())).findFirst().orElseThrow();
 
         return bestRoute;
     }
 
     @Override
-    public abstract Route calculateBestRoute(Vertex origin, Vertex destination, GraphStructure map);
+    public abstract CompleteRoute calculateBestRoute(Vertex origin, Vertex destination, GraphStructure map);
 
     protected String calculateTotalCost(Long costForTransportation) {
 
@@ -96,9 +93,9 @@ public abstract class AbstractTransportStrategy implements TransportStrategy {
         return result;
     }
 
-    protected List<Route> returnAllPossibleRoutesFromSource(Vertex source, List<Vertex> weightedMap) {
+    protected List<CompleteRoute> returnAllPossibleRoutesFromSource(Vertex source, List<Vertex> weightedMap) {
 
-        List<Route> paths = new ArrayList<>();
+        List<CompleteRoute> paths = new ArrayList<>();
         weightedMap.forEach(node -> {
 
             String path = node.getWeightedVerticesInReachOrder().stream().map((vertex) -> {
@@ -107,12 +104,12 @@ public abstract class AbstractTransportStrategy implements TransportStrategy {
 
             String routePath = "%s -> %s".formatted(path, node.getName());
             String distance = "%s kilometers".formatted(node.getWeight());
-            Long minutes = calculateMinutes(node.getWeight());
+            Long minutes = calculateMinutes(source.getPathToChild(node).getDistance());
             Long cents = calculateCost(node.getWeight());
             String estimatedTime = calculateTimeToTravel(minutes);
             String estimatedCost = calculateTotalCost(cents);
 
-            Route routeToNode = new Route(type, source.getName(), node.getName(), distance, estimatedTime,
+            CompleteRoute routeToNode = new CompleteRoute(type, source.getName(), node.getName(), distance, estimatedTime,
                     estimatedCost, routePath);
 
             paths.add(routeToNode);
@@ -120,26 +117,26 @@ public abstract class AbstractTransportStrategy implements TransportStrategy {
         return paths;
     }
 
-    protected void evaluateDistanceAndPath(Vertex adjacentNode, Integer edgeWeight, Vertex sourceNode) {
-        Integer newDistance = sourceNode.getWeight() + edgeWeight;
-        if (newDistance < adjacentNode.getWeight()) {
-            adjacentNode.setWeight(newDistance);
-            adjacentNode.setWeightedVerticesInReachOrder(Stream
-                    .concat(sourceNode.getWeightedVerticesInReachOrder().stream(), Stream.of(sourceNode)).toList());
+    protected void evaluatePathWeight(Vertex childVertex, Vertex parentVertex) {
+        Integer newWeight = parentVertex.getWeight() + parentVertex.getPathToChild(childVertex).getWeight();
+        if (newWeight < childVertex.getWeight()) {
+            childVertex.setWeight(newWeight);
+            childVertex.setPathsInReachOrder(Stream
+                    .concat(parentVertex.getPathsInReachOrder().stream(), Stream.of(parentVertex.getPathToChild(childVertex))).toList());
         }
     }
 
-    protected List<Route> calculateShortestPathToEachVertex(Vertex source, List<Vertex> map) {
+    protected List<CompleteRoute> calculateShortestPathToEachVertex(Vertex source, List<Vertex> map) {
         source.setWeight(0);
 
         Set<Vertex> settledNodes = new HashSet<>();
-        Queue<Vertex> unsettledNodes = new PriorityQueue<>(Collections.singleton(source));
+        Queue<Vertex> unsettledNodes = new PriorityQueue<>(Set.of(source));
 
         while (!unsettledNodes.isEmpty()) {
             Vertex current = unsettledNodes.poll();
             current.getPathToChildren().entrySet().stream().filter(
                     entry -> !settledNodes.contains(entry.getKey())).forEach(entry -> {
-                        evaluateDistanceAndPath(entry.getKey(), entry.getValue().getDistance(), current);
+                        evaluatePathWeight(entry.getKey(), current);
                         unsettledNodes.add(entry.getKey());
                     });
 
